# z.ai2api_python

./: .dockerignore  .env.captcha.example  .env.example  .env.flareprox  .env.qwen  .env.test  .gitignore  AllCall.py  BROWSER_LOGIN.md  CAPTCHA_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QWEN.md  Dockerfile  Dockerfile.qwen  Makefile  Makefile.qwen  QUICKSTART.md  QUICK_START.md  QUICK_TOKEN_SETUP.md  QWEN_CONSOLIDATION.md  QWEN_STANDALONE_README.md  QWEN_SUMMARY.md  README.md  TEST_ALL_README.md  UPGRADE_SUMMARY.md  VALIDATION_REPORT.md  ZAI_CC_README.md  ZAI_CC_SETUP.md  ZAI_LOGIN_README.md  auth.json  auth_config.json  config.json  deploy_browser_automation.sh  deploy_zai.sh  docker-compose.qwen.yml  docker-compose.yml  flareprox.py  install_and_run.sh  main.py  pyproject.toml  (+22 more)
app/: __init__.py  cli.py
app/auth/: __init__.py  provider_auth.py  session_store.py
app/core/: config.py  image_endpoints.py  zai_transformer.py
app/models/: schemas.py
app/providers/: __init__.py  base.py  grok_auth.py  grok_provider.py  grok_token_manager.py  provider_factory.py  qwen.py  qwen_builder.py  qwen_provider.py  qwen_upload.py  zai_provider.py  zai_provider.py.backup
app/utils/: captcha_solver.py  flareprox_manager.py  signature.py  token_utils.py
config/: providers.json.example
docker/: deploy.sh  docker-compose.yml
docs/: AUTHENTICATION.md  AUTHENTICATION_SETUP.md  CONCURRENT_REQUEST_FLOW.md  EXAMPLES.md  GROK_PROVIDER.md  IMPLEMENTATION_STATUS.md  PROVIDERS_ANALYSIS.md  PROVIDER_TEST_RESULTS.md  QWEN_API_STRUCTURE.md  QWEN_INTEGRATION.md  TESTING.md  USAGE_GUIDE.md
examples/: qwen_client_example.py  qwen_examples.py
scripts/: QUICKSTART.md  README.md  all.sh  browser_login.py  deploy.sh  init_tokens.py  post_install.sh  retrieve_token.py  send_openai_request.sh  send_request.sh  setup.sh  start.sh
tests/: README.md  conftest.py  parallelcalltest.py  test_all_models_direct.py  test_all_models_identity.py  test_all_providers.py  test_browser_auth.py  test_cli_and_discovery.py  test_grok.py  test_k2.py  test_k2_comprehensive.py  test_k2think_provider.py  test_longcat_provider.py  test_providers.py  test_providers_real.py  test_qwen.py  test_qwen_builder.py  test_qwen_comprehensive.py  test_qwen_provider.py  test_realworld_providers.py  test_results.json  test_token_utils.py  test_unit_providers.py  test_zai.py  test_zai_comprehensive.py  test_zai_direct.py  test_zai_models.py  test_zai_provider.py  test_zai_with_version.py
tests/integration/: test_all_features.py  test_all_providers.py  test_k2think_real.py  test_live_api.py  test_qwen_real.py  test_zai_real.py
tests/unit/: test_debug_api.py
